Add the second screen to the Project but it's not finished yet

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,7 @@
     <color name="sEARC" />
     <color name="SearchColor">#CDCDCD</color>
     <color name="CardColor">#272727</color>
+    <color name="CatergorieColor">#CDCDCD</color>
+    <color name="SelectedCat">#272727</color>
+    <color name="ProductColor">#CDCDCD</color>
 </resources>
